Revision history for Verilator

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilator 3.855 devel

****  Fix tracing of packed structs, bug705. [Jie Xu]

****  Fix --lint-only with MinGW, msg1283. [HyungKi Jeong]

****  Fix some delayed assignments of typedefed unpacked arrays.

****  Fix parameter pin vs. normal pin error, bug704. [Alex Solomatnikov]


* Verilator 3.854 2013-11-26

***   Add UNPACKED warning to convert unpacked structs. [Jeremy Bennett]

***   Add --compiler clang to work around compiler bug, bug694. [Stefan Ludwig]

****  Support vpi_get of vpiSuppressVal, bug687. [Varun Koyyalagunta]

****  Support vpi_get_time, bug688. [Varun Koyyalagunta]

****  Fix evaluation of chained parameter functions, bug684. [Ted Campbell]

****  Fix enum value extension of '1.

****  Fix multiple VPI variable callbacks, bug679. [Rich Porter]

****  Fix vpi_get of vpiSize, bug680. [Rich Porter]

****  Fix vpi_remove_cb inside callback, bug689. [Varun Koyyalagunta]

****  Fix crash with coverage of structures, bug691. [Eivind Liland]

****  Fix array assignment from const var, bug693. [Jie Xu]


* Verilator 3.853 2013-09-30

****  Add --no-order-clock-delay to work around bug613. [Charlie Brej]


* Verilator 3.852 2013-09-29

***   Support named function and task arguments. [Chris Randall]

***   Report SELRANGE warning for non-generate if, bug675. [Roland Kruse]

****  Fix ordering of $fgetc, msg1229. [Frederic Requin]

****  Fix --output-split-cfunc to count internal functions. [Chris Randall]

****  Fix crash on 32-bit Ubuntu, bug670. [Mark Jackson Pulver]


* Verilator 3.851 2013-08-15

***   Fix ordering of clock enables with delayed assigns, bug613. [Jeremy Bennett]

***   Fix vpi_iterate on memory words, bug655. [Rich Porter]

****  Fix final duplicate declarations when non-inlined, bug661. [Charlie Brej]
