@@ -325,6 +325,7 @@ descriptions in the next sections for more information.
     --trace-depth <levels>      Depth of tracing
     --trace-max-array <depth>   Maximum bit width for tracing
     --trace-max-width <width>   Maximum array depth for tracing
+    --trace-structs             Enable tracing structure names
     --trace-underscore          Enable tracing of _signals
      -U<var>                    Undefine preprocessor define
     --unroll-count <loops>      Tune maximum loop iterations
@@ -1020,6 +1021,13 @@ simulations.
 Rarely needed.  Specify the maximum bit width of a signal that may be
 traced.  Defaults to 256, as tracing large vectors may greatly slow traced
 simulations.
+
+=item --trace-structs
+
+Enable tracing to show the name of packed structure, union, and packed
+array fields, rather than a simgle combined packed bus.  Due to VCD file
+format constraints this may result in significantly slower trace times and
+larger trace files.
 
 =item --trace-underscore
 
