@@ -1,0 +1,148 @@
+$version Generated by VerilatedVcd $end
+$date Sat Dec 14 19:07:34 2013
+ $end
+$timescale 1ns $end
+
+ $scope module top $end
+  $var wire  1 0 clk $end
+  $scope module v $end
+   $var wire  1 0 clk $end
+   $var wire 32 # cyc [31:0] $end
+   $var wire  2 ' v_arrp [2:1] $end
+   $var wire  2 ( v_arrp_arrp [2:1] $end
+   $var wire  2 ) v_arrp_strp [1:0] $end
+   $var wire  1 1 v_arru(1) $end
+   $var wire  1 2 v_arru(2) $end
+   $var wire  2 * v_arru_arrp(3) [2:1] $end
+   $var wire  2 + v_arru_arrp(4) [2:1] $end
+   $var wire  1 3 v_arru_arru(3)(1) $end
+   $var wire  1 4 v_arru_arru(3)(2) $end
+   $var wire  1 5 v_arru_arru(4)(1) $end
+   $var wire  1 6 v_arru_arru(4)(2) $end
+   $var wire  2 , v_arru_strp(3) [1:0] $end
+   $var wire  2 - v_arru_strp(4) [1:0] $end
+   $var wire  2 $ v_strp [1:0] $end
+   $var wire  4 % v_strp_strp [3:0] $end
+   $var wire  2 & v_unip_strp [1:0] $end
+   $scope module unnamedblk1 $end
+    $var wire 32 . b [31:0] $end
+    $scope module unnamedblk2 $end
+     $var wire 32 / a [31:0] $end
+    $upscope $end
+   $upscope $end
+  $upscope $end
+ $upscope $end
+$enddefinitions $end
+
+
+#0
+b00000000000000000000000000000000 #
+b00 $
+b0000 %
+b00 &
+b00 '
+b0000 (
+b0000 )
+b00 *
+b00 +
+b00 ,
+b00 -
+b00000000000000000000000000000000 .
+b00000000000000000000000000000000 /
+00
+01
+02
+03
+04
+05
+06
+#10
+b00000000000000000000000000000001 #
+b11 $
+b1111 %
+b11 &
+b11 '
+b1111 (
+b1111 )
+b11 *
+b11 +
+b11 ,
+b11 -
+b00000000000000000000000000000101 .
+b00000000000000000000000000000101 /
+10
+#15
+00
+#20
+b00000000000000000000000000000010 #
+b00 $
+b0000 %
+b00 &
+b00 '
+b0000 (
+b0000 )
+b00 *
+b00 +
+b00 ,
+b00 -
+10
+#25
+00
+#30
+b00000000000000000000000000000011 #
+b11 $
+b1111 %
+b11 &
+b11 '
+b1111 (
+b1111 )
+b11 *
+b11 +
+b11 ,
+b11 -
+10
+#35
+00
+#40
+b00000000000000000000000000000100 #
+b00 $
+b0000 %
+b00 &
+b00 '
+b0000 (
+b0000 )
+b00 *
+b00 +
+b00 ,
+b00 -
+10
+#45
+00
+#50
+b00000000000000000000000000000101 #
+b11 $
+b1111 %
+b11 &
+b11 '
+b1111 (
+b1111 )
+b11 *
+b11 +
+b11 ,
+b11 -
+10
+#55
+00
+#60
+b00000000000000000000000000000110 #
+b00 $
+b0000 %
+b00 &
+b00 '
+b0000 (
+b0000 )
+b00 *
+b00 +
+b00 ,
+b00 -
+10
