@@ -1,0 +1,260 @@
+$version Generated by VerilatedVcd $end
+$date Sat Dec 14 18:56:47 2013
+ $end
+$timescale 1ns $end
+
+ $scope module top $end
+  $var wire  1 ; clk $end
+  $scope module v $end
+   $var wire  1 ; clk $end
+   $var wire 32 # cyc [31:0] $end
+   $var wire  2 , v_arrp [2:1] $end
+   $var wire  2 - v_arrp_arrp(3) [1:0] $end
+   $var wire  2 . v_arrp_arrp(4) [1:0] $end
+   $var wire  1 < v_arru(1) $end
+   $var wire  1 = v_arru(2) $end
+   $var wire  2 3 v_arru_arrp(3) [2:1] $end
+   $var wire  2 4 v_arru_arrp(4) [2:1] $end
+   $var wire  1 > v_arru_arru(3)(1) $end
+   $var wire  1 ? v_arru_arru(3)(2) $end
+   $var wire  1 @ v_arru_arru(4)(1) $end
+   $var wire  1 A v_arru_arru(4)(2) $end
+   $scope module unnamedblk1 $end
+    $var wire 32 9 b [31:0] $end
+    $scope module unnamedblk2 $end
+     $var wire 32 : a [31:0] $end
+    $upscope $end
+   $upscope $end
+   $scope module v_arrp_strp(3) $end
+    $var wire  1 0 b0 $end
+    $var wire  1 / b1 $end
+   $upscope $end
+   $scope module v_arrp_strp(4) $end
+    $var wire  1 2 b0 $end
+    $var wire  1 1 b1 $end
+   $upscope $end
+   $scope module v_arru_strp(3) $end
+    $var wire  1 6 b0 $end
+    $var wire  1 5 b1 $end
+   $upscope $end
+   $scope module v_arru_strp(4) $end
+    $var wire  1 8 b0 $end
+    $var wire  1 7 b1 $end
+   $upscope $end
+   $scope module v_strp $end
+    $var wire  1 % b0 $end
+    $var wire  1 $ b1 $end
+   $upscope $end
+   $scope module v_strp_strp $end
+    $scope module x0 $end
+     $var wire  1 ) b0 $end
+     $var wire  1 ( b1 $end
+    $upscope $end
+    $scope module x1 $end
+     $var wire  1 ' b0 $end
+     $var wire  1 & b1 $end
+    $upscope $end
+   $upscope $end
+   $scope module v_unip_strp $end
+    $scope module x0 $end
+     $var wire  1 + b0 $end
+     $var wire  1 * b1 $end
+    $upscope $end
+    $scope module x1 $end
+     $var wire  1 + b0 $end
+     $var wire  1 * b1 $end
+    $upscope $end
+   $upscope $end
+  $upscope $end
+ $upscope $end
+$enddefinitions $end
+
+
+#0
+b00000000000000000000000000000000 #
+0$
+0%
+0&
+0'
+0(
+0)
+0*
+0+
+b00 ,
+b00 -
+b00 .
+0/
+00
+01
+02
+b00 3
+b00 4
+05
+06
+07
+08
+b00000000000000000000000000000000 9
+b00000000000000000000000000000000 :
+0;
+0<
+0=
+0>
+0?
+0@
+0A
+#10
+b00000000000000000000000000000001 #
+1$
+1%
+1&
+1'
+1(
+1)
+1*
+1+
+b11 ,
+b11 -
+b11 .
+1/
+10
+11
+12
+b11 3
+b11 4
+15
+16
+17
+18
+b00000000000000000000000000000101 9
+b00000000000000000000000000000101 :
+1;
+#15
+0;
+#20
+b00000000000000000000000000000010 #
+0$
+0%
+0&
+0'
+0(
+0)
+0*
+0+
+b00 ,
+b00 -
+b00 .
+0/
+00
+01
+02
+b00 3
+b00 4
+05
+06
+07
+08
+1;
+#25
+0;
+#30
+b00000000000000000000000000000011 #
+1$
+1%
+1&
+1'
+1(
+1)
+1*
+1+
+b11 ,
+b11 -
+b11 .
+1/
+10
+11
+12
+b11 3
+b11 4
+15
+16
+17
+18
+1;
+#35
+0;
+#40
+b00000000000000000000000000000100 #
+0$
+0%
+0&
+0'
+0(
+0)
+0*
+0+
+b00 ,
+b00 -
+b00 .
+0/
+00
+01
+02
+b00 3
+b00 4
+05
+06
+07
+08
+1;
+#45
+0;
+#50
+b00000000000000000000000000000101 #
+1$
+1%
+1&
+1'
+1(
+1)
+1*
+1+
+b11 ,
+b11 -
+b11 .
+1/
+10
+11
+12
+b11 3
+b11 4
+15
+16
+17
+18
+1;
+#55
+0;
+#60
+b00000000000000000000000000000110 #
+0$
+0%
+0&
+0'
+0(
+0)
+0*
+0+
+b00 ,
+b00 -
+b00 .
+0/
+00
+01
+02
+b00 3
+b00 4
+05
+06
+07
+08
+1;
